# Generative-AI-Projects

./: .gitignore
llm_explainer_bot/: app.py  config.py  prompts.py
personal_knowledge_rag_demo_fixed/: README.md  app.py  evaluate.py  ingest.py  ragas_eval.py  report_template.md  requirements.txt
personal_knowledge_rag_demo_fixed/configs/: questions.json  tools_questions.json
personal_knowledge_rag_demo_fixed/outputs/: ragas_eval_detailed.csv  ragas_eval_summary.csv  retrieval_eval_detailed_20260420_022755.csv  (+1 more)
research-agent/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
research-agent/agent/: client.py  config.py  decomposer.py  models.py  synthesizer.py
research-agent/api/: models.py
research-agent/api/middleware/: rate_limiter.py
research-agent/api/routers/: chat.py  history.py
research-agent/api/services/: agent_runner.py
research-agent/frontend/: README.md
research-agent/frontend/src/: App.css  index.css
research-agent/frontend/src/components/: ChatInput.tsx  CitationChips.tsx  HistorySidebar.tsx  MessageBubble.tsx  MessageSkeleton.tsx
research-agent/frontend/src/hooks/: useChatStream.ts
research-agent/frontend/src/lib/: config.ts
research-agent/frontend/src/types/: api.ts
research-agent/scripts/: test_stream.py
research-agent/tests/: conftest.py  test_api.py  test_config.py  test_decomposer.py  test_error_handler.py  test_react_loop.py  test_tools.py
research-agent/tools/: fetch.py  search.py
semantic-search-explorer/: app.py  build_index.py  corpus_data.py  requirements.txt
week 6/research-agent/: .dockerignore  (+6 more)
(+37 files in other folders)
